<resources>
    <string name="app_name">Armet</string>
    <string name="facebook_app_id">197295884262870</string>
    <string name="facebook_application_id">197295884262870</string>
    <string name="fb_login_protocol_scheme">fb197295884262870</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_psw">Forgot Password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_email_required">An email is required</string>
    <string name="error_password_required">A password is required</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="incorrect_details">Your email address or password is incorrect. Please try again.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover_info_text">We will send your password reset information to the email address registered with your account.</string>
    <string name="email_address">email address</string>
    <string name="recover_password_mayus">RECOVER PASSWORD</string>
    <string name="go_back">GO BACK</string>
    <string name="register_subtitle">To use the ARMET app</string>
    <string name="email_address_required">email address *</string>
    <string name="password_required">password *</string>
    <string name="repeat_email">repeat email *</string>
    <string name="first_name">first name *</string>
    <string name="last_name">last name</string>
    <string name="company">company *</string>
    <string name="title">title</string>
    <string name="repeat_password_required">repeat password *</string>
    <string name="repeat_password">repeat password</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="get_started">Get Started</string>

    <!--fields-->
    <string name="error_empty_field">This field can\'t be empty</string>
    <string name="error_email_match">Email does not match</string>
    <string name="error_password_match">Password does not match</string>
    <string name="message_register_success">Thank you for registering!\n Welcome to the ARMET app. To activate your account, please follow the link in your email.</string>
    <string name="select_photo_from">Select source</string>
    <string name="select_gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="telephone">telephone</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="_invalid_email">Invalid email. Try again.</string>
    <string name="email_been_sent">We will send your password reset information to the email address registered with your account.</string> <!--An email has been sent to you.-->
    <string name="required_fields">The fields with * are mandatory.</string>
    <string name="remember_me">Remember me</string>
    <string name="try_again">try again.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="continue_btn">continue</string>
    <!--<string name="thanks_for_registering">Thank you for registering! Welcome to </string>-->
    <string name="server_took_too_long">Server took too long.</string>
    <string name="something_happened">Something Happened.</string>
    <string name="button_ok">OK</string>

    <!-- Osmar -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_detail">VIEWING:</string>
    <string name="txt_back">Back</string>
    <string name="email_required">Email address is required.</string>
    <string name="share_this_article">Share this article:</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_information">My Information</string>
    <string name="favorite_content">Favorite Content</string>
    <string name="premium_content">Premium Content</string>
    <string name="update_photo">Update Photo</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="user_info_updated">User information updated</string>
    <string name="txt_register">REGISTER FOR EVENT</string>
    <string name="fail_to_load_img">Failed to load image</string>
    <string name="verify_your_info">Verify your information</string>
    <string name="wait_to_see_changes">wait while changes take efect</string>
    <string name="not_comments">No comments added yet.</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="my_contacts">My Contacts</string>
    <string name="txt_remove_dialog">Are you sure you want to remove this bookmark?</string>
    <string name="txt_addcontact_dialog">Are you sure you want to add this contact?</string>
    <string name="txt_aremovecontact_dialog">Are you sure you want to remove this contact?</string>
    <string name="bookmarks_empty_data">You don\'t have saved bookmarks yet.</string>

    <!-- Debug -->
    <string name="debug_usermail"></string>
    <string name="debug_password"></string>

    <string name="image_load_later">Image will load later.</string>
    <string name="login_canceled">Login Canceled</string>
    <string name="request_failed_try_again">Request failed, please try again</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="connection_error">Connection Error</string>
    <string name="select_one">SELECT ONE:</string>
    <string name="sample">sample</string>
    <string name="current_results">CURRENT RESULTS:</string>
    <string name="poll">poll</string>
    <string name="server_taking_long_please_wait">Server is taking too long. Please wait.</string>
    <string name="dummy_text">Question . This is a long test just to display how long a question might be displayed.   lorem ipsum  Question . This is a long test just to display how long a question might be displayed.   lorem ipsum</string>
    <string name="background">background</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
