<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.ijzepeda.armet.activity.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        android:gravity="top|center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/register_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/action_register"
                    android:textAllCaps="true"
                    android:textColor="@color/colorHint"
                    android:textSize="@dimen/long_title"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/register_subtitle"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorHint"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/fields_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingStart="10dp"
                        android:text="@string/required_fields"
                        android:textColor="@color/colorHint" />

                    <EditText
                        android:id="@+id/email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_square_btn"
                        android:ems="15"
                        android:hint="@string/email_address_required"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textColorLink="@color/colorWhite"
                        android:textSize="@dimen/editTextSize" />


                    <EditText
                        android:id="@+id/email_doublecheck_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_square_btn"
                        android:ems="15"
                        android:hint="@string/repeat_email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textColorLink="@color/colorWhite"
                        android:textSize="@dimen/editTextSize" />


                    <EditText
                        android:id="@+id/firstname_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_square_btn"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:ems="15"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:maxLength="25"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textColorLink="@color/colorWhite"
                        android:textSize="@dimen/editTextSize" />


                    <EditText
                        android:id="@+id/telephone_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_square_btn"
                        android:ems="15"
                        android:hint="@string/telephone"
                        android:inputType="textPersonName"
                        android:maxLength="25"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textColorLink="@color/colorWhite"
                        android:textSize="@dimen/editTextSize" />


                    <EditText
                        android:id="@+id/password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_square_btn"
                        android:ems="15"
                        android:hint="@string/password_required"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textColorLink="@color/colorWhite"
                        android:textSize="@dimen/editTextSize" />


                    <EditText
                        android:id="@+id/password_repeat_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_square_btn"
                        android:ems="15"
                        android:hint="@string/repeat_password_required"
                        android:inputType="textPassword"

                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorHint"
                        android:textColorLink="@color/colorWhite"
                        android:textSize="@dimen/editTextSize" />

                    <Button
                        android:id="@+id/register_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10sp"
                        android:text="@string/get_started"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/information_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/messageTextview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/try_again"
                        android:textAlignment="center"
                        android:textColor="@color/colorWarning"
                        android:textSize="@dimen/h3" />

                    <Button
                        android:id="@+id/go_back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10sp"
                        android:text="@string/go_back"
                        android:textColor="@color/colorWhite" />


                    <Button
                        android:id="@+id/continue_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10sp"
                        android:text="@string/continue_btn"
                        android:textColor="@color/colorWhite" />
                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
